--- a/covid/assets/style/about.css
+++ b/covid/assets/style/about.css
@@ -1,14 +1,10 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: 0;
   text-decoration: none;
   list-style: none;
   font-family: "Montserrat", sans-serif;
-}
-
-html {
-  scroll-behavior: smooth;
 }
 
 .wrapper {
@@ -16,7 +12,6 @@ html {
   padding: 0 20px;
   margin: 0 auto;
   box-sizing: border-box;
-  position: relative;
 }
 
 .header {
@@ -113,60 +108,33 @@ html {
   cursor: pointer;
 }
 
-.preview {
+.about-preview {
   padding-top: 101px;
-  height: 100vh;
-  background: url("../img/preview__bg.png") no-repeat;
-  background-position: center;
+  background: url("../img/about__bg.png") no-repeat;
   background-size: cover;
   background-clip: content-box;
   background-origin: content-box;
   box-sizing: border-box;
-}
-.preview .wrapper {
+  min-height: 301px;
   display: flex;
+  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  height: 100%;
 }
-.preview .preview__content {
-  max-width: 632px;
-}
-.preview .preview__content .preview__title {
+.about-preview .about-preview__title {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 49px;
   color: #FFFFFF;
-  margin-bottom: 15px;
-}
-.preview .preview__content .preview__description {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-  margin-bottom: 30px;
-}
-.preview .preview__content .schedule-button {
-  border: none;
-  background: #6CD3AE;
-  border-radius: 10px;
-  padding: 21px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  cursor: pointer;
-  color: #fff;
-  transition: all 0.3s;
-}
-.preview .preview__content .schedule-button:hover {
-  background: #4C957A;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 .home-defenders {
   padding: 50px 0;
+}
+.home-defenders .home-defenders__content {
+  text-align: center;
 }
 .home-defenders .home-defenders__subtitle {
   font-style: normal;
@@ -195,139 +163,7 @@ html {
   text-align: center;
   color: #000;
 }
-
-.how-it-works {
-  background: rgba(196, 196, 196, 0.3);
-  padding: 50px 0;
-}
-.how-it-works .how-it-works__subtitle {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  color: #000000;
-  margin-bottom: 30px;
-}
-.how-it-works .how-it-works__title {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 37px;
-  color: #000000;
-  margin-bottom: 20px;
-  text-align: center;
-}
-.how-it-works .steps-help {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-}
-.how-it-works .steps-help .step:first-child .step__content::after {
-  content: "Step 1";
-  position: absolute;
-  top: -23px;
-  left: 25px;
-  border: 5px solid #fff;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-  background: #4C957A;
-  border-radius: 30px;
-  padding: 8px 37px;
-}
-.how-it-works .steps-help .step:nth-child(2) .step__content::after {
-  content: "Step 2";
-  position: absolute;
-  top: -23px;
-  left: 25px;
-  border: 5px solid #fff;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-  background: #4C957A;
-  border-radius: 30px;
-  padding: 8px 37px;
-}
-.how-it-works .steps-help .step:last-child .step__content::after {
-  content: "Step 3";
-  position: absolute;
-  border: 5px solid #fff;
-  top: -23px;
-  left: 25px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-  background: #4C957A;
-  border-radius: 30px;
-  padding: 8px 37px;
-}
-.how-it-works .step {
-  flex-basis: 30%;
-}
-.how-it-works .step__img {
-  max-height: 285px;
-  width: 100%;
-}
-.how-it-works .step__img img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-.how-it-works .step__content {
-  background: #fff;
-  padding: 45px 30px;
-  border: 2px solid #4C957A;
-  position: relative;
-  min-height: 600px;
-}
-.how-it-works .step__content .step__title {
-  font-weight: bold;
-  font-size: 25px;
-  line-height: 30px;
-  color: #000000;
-}
-.how-it-works .step__content .step__description {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  color: #000000;
-}
-
-.consult {
-  padding: 63px 0;
-  background: url("../img/consult__bg.png") no-repeat;
-  background-position: center;
-}
-.consult .consult__content {
-  text-align: center;
-}
-.consult .consult__title {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 37px;
-  text-align: center;
-  color: #FFFFFF;
-  margin-bottom: 25px;
-}
-.consult .consult__description {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  text-align: center;
-  color: #FFFFFF;
-  margin-bottom: 25px;
-}
-.consult .schedule-button {
+.home-defenders .schedule-button {
   border: none;
   background: #6CD3AE;
   border-radius: 10px;
@@ -338,10 +174,155 @@ html {
   line-height: 24px;
   color: #fff;
   cursor: pointer;
-  transition: all 0.3s;
+  margin-top: 15px;
 }
-.consult .schedule-button:hover {
-  background: #4C957A;
+
+.get-started {
+  padding: 20px 0;
+}
+.get-started .get-started__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.get-started .get-started__description {
+  max-width: 650px;
+}
+.get-started .get-started__subtitle {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 18px;
+  color: #000000;
+}
+.get-started .get-started__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 37px;
+  color: #000000;
+  margin-top: 30px;
+}
+.get-started .get-started__title span {
+  color: #6CD3AE;
+}
+.get-started .get-started__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  margin-top: 25px;
+}
+.get-started .get-started__information {
+  margin-top: 15px;
+}
+.get-started .information__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 18px;
+  color: #000000;
+  margin-bottom: 20px;
+}
+.get-started .information__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 11px;
+}
+.get-started .information__item img {
+  margin-right: 19px;
+}
+.get-started .call-now {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+  text-transform: capitalize;
+  border: none;
+  padding: 21px 51px;
+  background: #6CD3AE;
+  border-radius: 10px;
+}
+.get-started .foreclosure-preview__form-consultation {
+  box-sizing: border-box;
+  padding: 30px 16px 30px 24px;
+  background: rgba(96, 200, 162, 0.8);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 454px;
+  width: 100%;
+}
+.get-started .form-consultation__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+.get-started .form-consultation__subtitle {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.get-started .form-consultation__description {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+  text-align: center;
+  color: #E3E1E1;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+.get-started .form-consultation__input {
+  background: #FFFFFF;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
+  padding: 16px 12px 12px;
+  margin-bottom: 25px;
+}
+.get-started .form-consultation__input::placeholder {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(129, 129, 129, 0.7);
+  text-transform: capitalize;
+}
+.get-started .form__list {
+  background: #FFFFFF;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
+  padding: 16px 12px 12px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(129, 129, 129, 0.7);
+}
+.get-started .form-consultation__button {
+  background: #76ECC1;
+  border-radius: 10px;
+  padding: 21px 140px;
+  border: none;
+  margin-top: 28px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
 }
 
 .footer {
@@ -474,55 +455,6 @@ html {
   z-index: -1;
 }
 
-@media (max-width: 1439px) {
-  .how-it-works .steps-help {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-  .how-it-works .steps-help .step {
-    flex-basis: 45%;
-    margin-bottom: 20px;
-  }
-  .how-it-works .steps-help .step:first-child {
-    margin-right: 30px;
-  }
-  .how-it-works .steps-help .step .step__img {
-    height: 350px;
-  }
-  .how-it-works .steps-help .step .step__img img {
-    object-fit: fill;
-  }
-  .how-it-works .step__content {
-    padding: 30px 10px;
-    min-height: 10px;
-  }
-  .how-it-works .step__content .step__title {
-    font-size: 18px;
-    text-align: center;
-  }
-  .how-it-works .step__content .step__description {
-    font-size: 14px;
-    text-align: center;
-  }
-}
-@media (max-width: 1000px) {
-  .how-it-works .steps-help {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-  .how-it-works .steps-help .step {
-    flex-basis: 70%;
-    margin-bottom: 20px;
-  }
-  .how-it-works .steps-help .step .step__img {
-    height: 350px;
-  }
-  .how-it-works .steps-help .step .step__img img {
-    object-fit: fill;
-  }
-}
 @media (min-width: 768px) and (max-width: 1439px) {
   .logo {
     max-width: 105px;
@@ -550,48 +482,109 @@ html {
     margin-right: 0;
   }
 
-  .preview .preview__content .preview__title {
-    font-size: 30px;
-    line-height: 37px;
-  }
-  .preview .preview__content .preview__description {
-    font-size: 16px;
-  }
-  .preview .preview__content .schedule-button {
-    font-size: 16px;
+  .about-preview {
+    min-height: 220px;
   }
 
-  .how-it-works .how-it-works__subtitle {
+  .home-defenders .home-defenders__description {
+    font-size: 18px;
+  }
+  .home-defenders .schedule-button {
+    font-size: 18px;
+  }
+
+  .get-started .get-started__description {
+    max-width: none;
+    flex-basis: 45%;
+    position: relative;
+  }
+  .get-started .get-started__description .get-started__title {
+    font-size: 24px;
+    margin-top: 15px;
+  }
+  .get-started .get-started__description .get-started__text {
+    font-size: 16px;
+  }
+  .get-started .foreclosure-preview__form-consultation {
+    flex-basis: 45%;
+    width: 40%;
+  }
+  .get-started .form-consultation__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+    text-transform: uppercase;
+  }
+  .get-started .form-consultation__subtitle {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .get-started .form-consultation__description {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    text-align: center;
+    color: #E3E1E1;
+    margin-top: 20px;
     margin-bottom: 15px;
   }
-  .how-it-works .step:first-child {
-    margin-right: 0;
-  }
-  .how-it-works .step__content {
-    padding: 30px 10px;
-    min-height: 10px;
-  }
-  .how-it-works .step__content .step__title {
-    font-size: 18px;
-    text-align: center;
-  }
-  .how-it-works .step__content .step__description {
-    font-size: 14px;
-    text-align: center;
-  }
-
-  .consult {
-    padding: 38px 0;
-    background-size: cover;
-  }
-  .consult .consult__title {
-    font-size: 24px;
-  }
-  .consult .consult__description {
+  .get-started .form-consultation__input {
+    background: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: none;
+    padding: 16px 12px 12px;
+    margin-bottom: 10px;
     font-size: 16px;
   }
-  .consult .schedule-button {
+  .get-started .form-consultation__input::placeholder {
+    font-style: normal;
+    font-weight: 500;
     font-size: 16px;
+    line-height: 24px;
+    color: rgba(129, 129, 129, 0.7);
+    text-transform: capitalize;
+  }
+  .get-started .form__list {
+    background: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: none;
+    padding: 16px 12px 12px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(129, 129, 129, 0.7);
+    position: relative;
+    font-size: 16px;
+  }
+  .get-started .form-consultation__button {
+    background: #76ECC1;
+    border-radius: 10px;
+    padding: 13px 60px;
+    border: none;
+    margin-top: 28px;
+    cursor: pointer;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FFFFFF;
+    transition: all 0.3s;
+  }
+  .get-started .form-consultation__button:hover {
+    background: #4C957A;
   }
 
   .footer {
@@ -705,26 +698,6 @@ html {
     right: 0;
   }
 
-  .preview {
-    padding-top: 86px;
-  }
-  .preview .preview__content {
-    text-align: center;
-  }
-  .preview .preview__content .preview__title {
-    font-size: 20px;
-    line-height: 27px;
-    text-align: center;
-  }
-  .preview .preview__content .preview__description {
-    text-align: center;
-    font-size: 18px;
-  }
-  .preview .preview__content .schedule-button {
-    font-size: 18px;
-    padding: 17px 13px;
-  }
-
   .home-defenders {
     padding: 30px 0;
   }
@@ -739,81 +712,50 @@ html {
   .home-defenders .home-defenders__content .home-defenders__description {
     font-size: 16px;
   }
-
-  .how-it-works {
-    padding: 30px 0;
-  }
-  .how-it-works .how-it-works__content .how-it-works__subtitle {
-    margin-bottom: 10px;
-  }
-  .how-it-works .how-it-works__content .how-it-works__title {
-    font-size: 24px;
-    line-height: 30px;
-  }
-  .how-it-works .how-it-works__content .steps-help {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .how-it-works .how-it-works__content .steps-help .step {
-    flex-basis: 90%;
-    margin-bottom: 15px;
-  }
-  .how-it-works .how-it-works__content .steps-help .step:first-child {
-    margin-right: 0;
-  }
-  .how-it-works .how-it-works__content .steps-help .step:first-child .step__content::after {
-    left: 7px;
-    top: -20px;
-    padding: 3px 27px;
-    font-size: 16px;
-  }
-  .how-it-works .how-it-works__content .steps-help .step:nth-child(2) .step__content::after {
-    left: 7px;
-    top: -20px;
-    padding: 3px 27px;
-    font-size: 16px;
-  }
-  .how-it-works .how-it-works__content .steps-help .step:last-child .step__content::after {
-    left: 7px;
-    top: -20px;
-    padding: 3px 27px;
-    font-size: 16px;
-  }
-  .how-it-works .how-it-works__content .steps-help .step .step__img {
-    height: 180px;
-  }
-  .how-it-works .how-it-works__content .steps-help .step .step__img img {
-    object-fit: fill;
-  }
-  .how-it-works .how-it-works__content .steps-help .step .step__content {
-    padding: 20px 5px;
-    min-height: 10px;
-  }
-  .how-it-works .how-it-works__content .steps-help .step .step__content .step__title {
-    font-size: 18px;
-    line-height: 20px;
-    text-align: center;
-  }
-  .how-it-works .how-it-works__content .steps-help .step .step__content .step__description {
-    font-size: 14px;
-    line-height: 18px;
-    text-align: center;
-  }
-
-  .consult {
-    padding: 10px 0;
-  }
-  .consult .consult__content .consult__title {
-    font-size: 22px;
-    line-height: 25px;
-  }
-  .consult .consult__content .consult__description {
-    font-size: 14px;
-    line-height: 18px;
-  }
-  .consult .consult__content .schedule-button {
+  .home-defenders .home-defenders__content .schedule-button {
     font-size: 14px;
     padding: 17px 13px;
+  }
+
+  .get-started .get-started__content {
+    flex-direction: column;
+  }
+  .get-started .get-started__content .get-started__description .get-started__subtitle {
+    text-align: center;
+  }
+  .get-started .get-started__content .get-started__description .get-started__title {
+    text-align: center;
+    font-size: 24px;
+    line-height: 27px;
+    margin-top: 10px;
+  }
+  .get-started .get-started__content .get-started__description .get-started__text {
+    text-align: center;
+    font-size: 16px;
+    margin-top: 5px;
+  }
+  .get-started .get-started__content .get-started__information {
+    text-align: center;
+  }
+  .get-started .get-started__content .get-started__information .information__title {
+    text-align: center;
+  }
+  .get-started .get-started__content .get-started__information .information__item img {
+    max-width: 50px;
+  }
+  .get-started .get-started__content .get-started__information .information__item .item__text {
+    font-size: 14px;
+  }
+  .get-started .get-started__content .get-started__information .call-now {
+    font-size: 16px;
+    padding: 15px 50px;
+  }
+  .get-started .get-started__content .foreclosure-preview__form-consultation {
+    margin-top: 15px;
+  }
+  .get-started .get-started__content .form-consultation__button {
+    font-size: 16px;
+    padding: 21px 54px;
   }
 
   .footer {
